css/style.css
/* ... */
#block-system-main div.field-name-field-tags div.field-items,
#block-system-main div.field-name-field-tags div.field-item {
  font-size: 95%;
}
#block-system-main div.field-name-field-tags a:hover,
#block-system-main div.field-name-field-tags a:focus {
  text-decoration: underline;
}
#block-system-main .link-wrapper {
  text-align: right;
}
#block-system-main ul.links {
  color: #68696b;
  font-size: 80%;
}
#block-system-main .field-type-image img,
#block-system-main .user-picture img {
  margin: 0 0 1em;
}

dt {
  font-weight: bold;
}
dd {
  margin-bottom: 1em;
}

.field-name-body .panel {
  border: 1px solid #785fa0;
  background-color: #efefef;
  padding: 8px;
}

.content p > img {
  border: 1px solid #785fa0;
}

/* ----------------- Comments ----------------- */

#comment-wrapper {
  border-top: 1px solid #d3d7d9;
  padding-top: 15px;
}
#comments h2.title {
  margin-bottom: 1em;
}
#comments div.user-picture img {
  margin-left: 0; /* LTR */
}
#comments .comment {
  margin-bottom: 20px;
}
#comments .attribution {
  float: left; /* LTR */
  width: 110px;
}
#comments .attribution img {
  margin: 0;
  border: 1px solid #d3d7d9;
}
#comments .submitted p {
  margin: 4px 0;
  font-size: 110%;
  line-height: 1.2em;
}
#comments .submitted .comment-time {
  font-size: 70%;
  color: #68696b;
}
#comments .content {
  font-size: 90%;
}
#comments .comment-arrow {
  background: url(../images/comment-arrow.png); /* LTR */
  height: 40px;
  width: 20px;
  margin-left: -45px; /* LTR */
  margin-top: 10px;
  position: absolute;
}
#comments .comment-text {
  margin-left: 140px; /* LTR */
  padding: 10px 25px;
  border: 1px solid #d3d7d9;
}
#comments .indented {
  margin-left: 40px; /* LTR */
}

/* ------------------ Sidebar ----------------- */

.sidebar .block {
  border: 1px solid;
  padding: 15px 20px;
  margin: 20px 0;
}
.sidebar h2,
#preview .sidebar h2 {
  margin: 0 0 0.5em;
  border-bottom: 1px solid #d6d6d6;
  padding-bottom: 5px;
  text-shadow: 0 1px 0 #fff;
}
.sidebar tbody {
  border: none;
}
.sidebar tr.even,
.sidebar tr.odd {
  background: none;
  border-bottom: 1px solid #d6d6d6;
}

/* ----------------- Triptych ----------------- */

#triptych-wrapper {
  background-color: #fafafa;
  background: rgba(40,40,0,0.08);
}
#triptych h2 {
  color: #000;
  font-size: 194%;
  margin-bottom: .8em;
  text-shadow: 0px 1px 0 #fff;
  text-align: center;
  line-height: 1.2em;
}
#triptych .block {
  margin-bottom: 2em;
  padding-bottom: 2em;
  border-bottom: 1px solid #dfdfdf;
}
#triptych .block.last {
  border-bottom: none;
}
#triptych .block ul li,
#triptych .block ol li {
  list-style: none;
}
#triptych .block ul,
#triptych .block ol {
  padding-left: 0;
}
#triptych #block-user-login .form-text {
  width: 185px;
}
#triptych #block-user-online p {
  margin-bottom: 0;
}
#triptych #block-node-syndicate h2 {
  overflow: hidden;
  width: 0;
  height: 0;
}
#triptych-last #block-node-syndicate {
  text-align: right;
}
#triptych #block-search-form .form-type-textfield input {
  width: 185px;
}
#triptych-middle #block-system-powered-by {
  text-align: center;
}
#triptych-last #block-system-powered-by {
  text-align: right;
}

/* ------------------ Footer ------------------ */

#footer-wrapper {
  color: #c0c0c0;
  color: rgba(255,255,255,0.65);  
  font-size: 90%;
}
#footer-wrapper a {
  color: #fcfcfc;
  color: rgba(255,255,255,0.8);
}
#footer-wrapper a:hover,
#footer-wrapper a:focus {
  color: #fefefe;
  color: rgba(255,255,255,0.95);  
  text-decoration: underline;
}
#footer-wrapper .block {
  margin: 20px 0;
  border: 1px solid #444;
  border-color: rgba(255,255,255,0.1);  
  padding: 10px;
}
#footer-columns .block-menu,
#footer .block {
  margin: 0;
  padding: 0;
  border: none;
}
#footer .block,
#footer .block .content {
  overflow: hidden;
  margin: .5em 0;
}
#footer .block h2 {
  margin: 0;
}
#footer-wrapper ul#secondary-menu {
  margin: 1em 0;
}
#footer-columns h2 {
  border-bottom: 1px solid #555;
  border-color: rgba(255,255,255,0.15);  
  font-size: 104%;
  margin-bottom: 0;
  padding-bottom: 3px;
  text-transform: uppercase;
}
#footer-columns .content {
  margin-top: 0;
}
#footer-columns p {
  margin-top: 1em;
}
#footer-columns .content ul {
  list-style: none;
  padding-left: 0; /* LTR */
  margin-left: 0
}
#footer-columns .content li {
  list-style: none;
  margin: 0;
  padding: 0;
}
#footer-columns .content li a {
  display: block;
  border-bottom: 1px solid #555;
  border-color: rgba(255,255,255,0.15);  
  line-height: 1.2em;
  padding: 0.8em 2px 0.8em 20px; /* LTR */
  text-indent: -15px;
}
#footer-columns .content li a:hover,
#footer-columns .content li a:focus {
  background-color: #1f1f21;
  background-color: rgba(255,255,255,.05);
  text-decoration: none;
}
#footer {
  font-size: 92%;
  letter-spacing: 0.2px;
  margin-top: 30px;
  border-top: 1px solid #555;
  border-color: rgba(255,255,255,0.15);  
}
#footer .region {
  margin-top: 20px;
}
#footer .block {
  clear: both;
}
#footer ul,
#footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}
#footer li a {
  float: left; /* LTR */
  padding: 0 12px;
  display: block;
  border-right: 1px solid #555; /* LTR */
  border-color: rgba(255,255,255,0.15);  
}
#footer li.first a {
  padding-left: 0; /* LTR */
}
#footer li.last a {
  padding-right: 0; /* LTR */
  border-right: none; /* LTR */
}
#footer-wrapper tr.odd {
  background-color: transparent;
}
#footer-wrapper tr.even {
  background-color: #2c2c2c;
  background-color: rgba(0,0,0,0.15)
}

/* --------------- System Tabs  --------------- */

.tabs {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin-bottom: 20px;
}
.tabs ul.primary {
  padding: 0 3px;
  margin: 0;
  overflow: hidden;
  border: none;
  background: transparent url(../images/tabs-border.png) repeat-x left bottom;
}
.tabs ul.primary li {
  display: block;
  float: left; /* LTR */
  vertical-align: bottom;
  margin: 0 5px 0 0; /* LTR */
}
.tabs ul.primary li a.active {
  border-bottom: 1px solid #fff;
}
/* ... */

